2025-10-14

- Adding internal render themes dynamically from current server's assets
- Improved internal render themes and their overlays handling
- Setting an operating system-dependent temporary directory environment 
  for use by script and internally called applications 
- Added french translation (Help with translation errors is welcome!) 

2025-10-06

- Added overlay selection for internal render themes
  (currently "BIKER", "DARK", "INDIGO" and "MOTORIDER")

2025-10-05

- Added new QMapShack settings menu
  Removed qms_args from "Mapsforge-for-QMapShack.ini" instead
- Workaround running script by "Open with" on Windows (Fatal Qt6 issue!)
- Minor script optimizations

2025-09-25

- Fixed script aborting when previous theme file no longer exists
- Improved moving focus by mouse button 1 click away from text input fields
- Added new internal render themes "DARK" and "INDIGO"
  (server version >= 0.26.1.0)

2025-08-27

- Speed up console output
- Hidden console window no longer reduces performance
- For performance reasons, console output window
  can now be disabled during console output generation
  and enabled again later to view cumulative output

2025-08-22

- Modified console again
  to prevent from potential core dump on Linux

2025-08-20

- Modified console output to avoid console potentially
  freezing and becoming unresponsable to keyboard/mouse
  due to being flooded
- Added scrollbar if list of server tasks is longer than 5 tasks

2025-06-14

- Made DEFAULT render theme first theme in list of available render themes
- Up/Down key and mouse wheel in server task entry field
  now allows scrolling through available tasks
- Now creating not existing QMapShack defined "cachePath" and "mapPath" folders
- Added support for Marlin-renderer for JDK17+

2025-04-29

- Removed no longer existing internal render theme "MOTORIDER_DARK",
  added new internal render theme "BIKER" instead
  (server version >= 0.25.0.0)

2025-04-28
